[workspace]
members = [".", "subversion-sys"]

[package]
name = "subversion"
version = "0.0.8"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@apache.org>"]
repository = "https://github.com/jelmer/subversion-rs.git"
homepage = "https://github.com/jelmer/subversion-rs"
license = "Apache-2.0"
description = "Rust bindings for Subversion"
documentation = "https://docs.rs/subversion"

[lib]
doctest = false

[dependencies]
apr = { path = "../apr-rs" }
apr-sys = { path = "../apr-rs/apr-sys" }
bitflags = "2.9.3"
ctor = "0.5.0"
lazy_static = "1.5.0"
pyo3 = { version = ">=0.22", optional = true }
url = { version = "2.5.7", optional = true }
subversion-sys = { version = "0.0.8", path = "subversion-sys", default-features = false }

[features]
default = ["ra", "wc", "client", "delta"]
pyo3 = ["dep:pyo3"]
url = ["dep:url"]
client = ["wc", "subversion-sys/client"]
ra = ["delta", "subversion-sys/ra"]
wc = ["delta", "subversion-sys/wc"]
delta = ["subversion-sys/delta"]
# Enable zero-copy borrowed views for high-performance operations
# This exposes lifetime-bound types that borrow from pools
zero-copy = []

[dev-dependencies]
tempfile = "3.21.0"

[[example]]
name = "checkout"
required-features = ["client"]

[[example]]
name = "cat"
required-features = ["client"]

[[example]]
name = "merge_with_conflicts"
required-features = ["client"]
