[package]
name = "subversion-sys"
version = "0.1.2"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@apache.org>"]
repository = "https://github.com/jelmer/subversion-rs.git"
homepage = "https://github.com/jelmer/subversion-rs"
license = "Apache-2.0"
description = "Low-level FFI bindings for Subversion"
documentation = "https://docs.rs/subversion-sys"

[lib]
doctest = false

[dependencies]
apr = { version = ">=0.1.14, <0.5" }
apr-sys = "0.2.1"

[build-dependencies]
bindgen = "0.72"
system-deps = "7.0"

[features]
default = ["ra", "wc", "client", "delta"]
client = []
ra = ["delta"]
wc = ["delta"]
delta = []
# Optional password store auth libraries. gpg-agent lives in libsvn_subr and
# needs no extra linking, so it has no sys-level feature.
gnome-keyring = []
kwallet = []

[package.metadata.system-deps]
libsvn_client = { version = ">=1.14", feature = "client" }
libsvn_delta = { version = ">=1.14", feature = "delta" }
libsvn_diff = ">=1.14"
libsvn_subr = ">=1.14"
libsvn_repos = ">=1.14"
libsvn_fs = ">=1.14"
libsvn_wc = { version = ">=1.14", feature = "wc" }
libsvn_ra = { version = ">=1.14", feature = "ra" }
libsvn_auth_gnome_keyring = { version = ">=1.14", feature = "gnome-keyring" }
libsvn_auth_kwallet = { version = ">=1.14", feature = "kwallet" }
